set02/problem01_compile_errors.txt
Compilation started at 11/26/2023, 11:35:01 AM
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c: In function 'main':
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:4:5: warning: implicit declaration of function 'input' [-Wimplicit-function-declaration]
     input(&base, &height);
     ^~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:5:5: warning: implicit declaration of function 'find_area' [-Wimplicit-function-declaration]
     find_area(base, height, &area);
     ^~~~~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:6:5: warning: implicit declaration of function 'output' [-Wimplicit-function-declaration]
     output(base, height, area);
     ^~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c: At top level:
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:11:6: warning: conflicting types for 'input'
 void input(float *base, float *height) {
      ^~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:4:5: note: previous implicit declaration of 'input' was here
     input(&base, &height);
     ^~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:18:6: warning: conflicting types for 'find_area'
 void find_area(float base, float height, float *area) {
      ^~~~~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:5:5: note: previous implicit declaration of 'find_area' was here
     find_area(base, height, &area);
     ^~~~~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:22:6: warning: conflicting types for 'output'
 void output(float base, float height, float area) {
      ^~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:6:5: note: previous implicit declaration of 'output' was here
     output(base, height, area);
     ^~~~~~
Compilation finished at 11/26/2023, 11:35:02 AM
Compilation started at 11/26/2023, 11:38:58 AM
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c: In function 'main':
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:4:5: warning: implicit declaration of function 'input' [-Wimplicit-function-declaration]
     input(&base, &height);
     ^~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:5:5: warning: implicit declaration of function 'find_area' [-Wimplicit-function-declaration]
     find_area(base, height, &area);
     ^~~~~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:6:5: warning: implicit declaration of function 'output' [-Wimplicit-function-declaration]
     output(base, height, area);
     ^~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c: At top level:
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:11:6: warning: conflicting types for 'input'
 void input(float *base, float *height) {
      ^~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:4:5: note: previous implicit declaration of 'input' was here
     input(&base, &height);
     ^~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:18:6: warning: conflicting types for 'find_area'
 void find_area(float base, float height, float *area) {
      ^~~~~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:5:5: note: previous implicit declaration of 'find_area' was here
     find_area(base, height, &area);
     ^~~~~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:22:6: warning: conflicting types for 'output'
 void output(float base, float height, float area) {
      ^~~~~~
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:6:5: note: previous implicit declaration of 'output' was here
     output(base, height, area);
     ^~~~~~
Compilation finished at 11/26/2023, 11:38:58 AM
Compilation started at 11/26/2023, 11:40:12 AM
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c: In function 'output':
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:5:12: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int main() {
            ^
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:14:40: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void input(float *base, float *height) {
                                        ^
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:21:55: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void find_area(float base, float height, float *area) {
                                                       ^
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:25:51: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void output(float base, float height, float area) {
                                                   ^
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set02\problem01.c:29:1: error: expected '{' at end of input
 }
 ^
Compilation finished at 11/26/2023, 11:40:13 AM
Compilation started at 11/26/2023, 11:40:21 AM
Compilation finished at 11/26/2023, 11:40:22 AM
Compilation started at 11/26/2023, 11:42:10 AM
Compilation finished at 11/26/2023, 11:42:10 AM
Compilation started at 11/26/2023, 11:42:53 AM
Compilation finished at 11/26/2023, 11:42:53 AM
Compilation started at 11/26/2023, 11:46:18 AM
Compilation finished at 11/26/2023, 11:46:19 AM
Compilation started at 11/26/2023, 6:54:13 PM
Compilation finished at 11/26/2023, 6:54:13 PM
